# Arabic_News_Using-NLP

./: .gitignore  README.md  pyproject.toml  requirements.txt
Streamlit/: config.toml
app/: cluster_view.py  search_engine.py  streamlit_app.py  theme.py  topic_labels.py
configs/: default.yaml  dev.yaml  prod.yaml
reports/: ArabicSeek_presentation (2).pptx  summarization_eval.json
src/cleaning/: __init__.py  al_prefix_fix.py  llm_word_fixer.py  word_splitter.py
src/embadding/: __init__.py  base.py  e5.py  io.py
src/scraping/: __init__.py  dedup.py  scraper.py  storage.py
src/scraping/collectors/: rss.py  sitemap.py
src/utils/: __init__.py  io.py
