[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arnlp"
version = "0.1.0"
description = "Arabic news NLP: scraping, preprocessing, clustering, summarization, ambiguity."
requires-python = ">=3.10"
readme = "README.md"
authors = [{ name = "Mohammed Almadhoun" }]
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-ra --strict-markers"
markers = [
    "slow: tests that load heavy models (CAMeL, transformers)",
]
